package com.SDD;

import com.SDD.graphic.MainApplication;

public class TestMain {

    public static void main(String[] args) {
        MainApplication.main(args);
    }
}
