@startuml
left to right direction
class TestMain {
+ {static} void main(String[])
}
abstract class ComboBoxController {
+ {static} void fillComboBoxItem(ComboBox<String>,String)
- {static} void desactivateEventComboBox(ComboBox<String>)
}
class PrioritySearchTreeOE {
}
class PrioritySearchTreeO {
}
abstract class Alert {
+ {static} void alertDisplay(javafx.scene.control.Alert,String)
}
abstract class CanvasController {
- {static} GraphicsContext gc
+ {static} void resetZoomAndPosition(Canvas)
+ {static} void canvasInit(Canvas)
+ {static} void changeCanvasColor(Canvas)
+ {static} GraphicsContext getGc()
}
class PrioritySearchTreeE {
}
class SegmentCreator {
+ {static} void main(String[])
- {static} void writeSegmentsFile(int,int)
+ {static} double[] segmentRandomCreation(int)
}
class PstWrapper {
- PrioritySearchTree original
- PrioritySearchTreeO opposed
- PrioritySearchTreeE exchanged
- PrioritySearchTreeOE opposedExchanged
+ ArrayList<Segment> getWindow(Segment,ArrayList<Double>)
+ PrioritySearchTree getOriginal()
+ PrioritySearchTreeO getOpposed()
+ PrioritySearchTreeE getExchanged()
+ PrioritySearchTreeOE getOpposedExchanged()
}
abstract class WindowController {
+ {static} void changeWindow(Segment,ArrayList<Double>,TextField,TextField,TextField,TextField)
+ {static} void drawWindow(GraphicsContext,Segment)
+ {static} boolean isWindowGood(Segment,ArrayList<Double>)
}
abstract class Utility {
+ {static} ArrayList<Segment> opposeArray(ArrayList<Segment>)
+ {static} ArrayList<Segment> exchangeArray(ArrayList<Segment>)
+ {static} Segment oppose(Segment)
+ {static} Segment exchange(Segment)
}
abstract class SegmentController {
- {static} double ratio
- {static} double canvasWidth
+ {static} double applyRatio(double)
- {static} void drawSegment(Segment,GraphicsContext)
+ {static} void drawSegments(Segment,ArrayList<Double>,PstWrapper,GraphicsContext,Text)
+ {static} void setRatio(double)
+ {static} void setCanvasWidth(double)
}
class PSTNode {
- Segment segment
- int median
- PSTNode leftChild
- PSTNode rightChild
+ Segment getSegment()
+ int getMedian()
+ int getSpecialMedian(Boolean)
+ void setMedian(int)
+ PSTNode getLeftChild()
+ void setLeftChild(PSTNode)
+ PSTNode getRightChild()
+ void setRightChild(PSTNode)
+ boolean isLeaf()
}
class Segment {
- double x
- double y
- double xPrime
- double yPrime
+ double getX()
+ void setX(double)
+ double getY()
+ void setY(double)
+ double getxPrime()
+ void setxPrime(double)
+ double getyPrime()
+ void setyPrime(double)
+ Segment clone()
+ String toString()
}
class Controller {
- ComboBox<String> directoryComboBox
- Canvas canvas
- TextField xField
- ScrollPane scrollPane
- Text numberSegment
- String path
- PstWrapper pstWrapper
- ArrayList<Double> windowSize
- Segment window
- double canvasX
+ void initialize()
+ void loadingSegmentFromFile()
+ void changeDirectory()
+ void clearCanvas()
+ void draw()
+ void resetCoordinates()
+ void setOnScroll(ScrollEvent)
+ void setOnMousePressed(MouseEvent)
+ void setOnMouseReleased()
+ void setOnMouseDragged(MouseEvent)
}
class MainApplication {
- {static} Stage stage
- {static} Alert alert
+ {static} void main(String[])
+ void start(Stage)
+ {static} Stage getStage()
+ {static} Alert getAlert()
}
abstract class Heap {
+ {static} void heapify(ArrayList<Segment>)
+ {static} void heapify(ArrayList<Segment>,int,int)
}
class PrioritySearchTree {
- PSTNode root
- PSTNode buildPST(ArrayList<Segment>)
- Segment findRoot(ArrayList<Segment>)
+ PSTNode getRoot()
+ ArrayList<Segment> getAllSegments()
- ArrayList<Segment> getAllSegments(PSTNode)
+ ArrayList<Segment> windowing(Segment)
- void windowing(PSTNode,Segment,ArrayList<Segment>)
- boolean checkIn(Segment,Segment)
- boolean checkCrossBottom(Segment,Segment)
- boolean checkCrossLeft(Segment,Segment)
}

Application <|-- MainApplication
TestMain -- MainApplication : Call >
PrioritySearchTree <|-- PrioritySearchTreeOE
PrioritySearchTree <|-- PrioritySearchTreeO
PrioritySearchTree <|-- PrioritySearchTreeE
PSTNode --* PrioritySearchTree
PSTNode *-- PSTNode : leftChild
PSTNode --* PSTNode : rightChild
PSTNode *-- Segment
PrioritySearchTree --* PstWrapper : 1..*
PrioritySearchTreeOE --* PstWrapper : 1..*
PrioritySearchTreeO --* PstWrapper : 1..*
PrioritySearchTreeE --* PstWrapper : 1..*
Segment --  Utility : Use <
PrioritySearchTree -- Heap : Use >
Controller -- Alert : Use >
Controller -- WindowController : Use >
Controller -r- SegmentController : Use >
Controller -- CanvasController : Use >
Controller -u- ComboBoxController : Use >
Segment --* Controller
SegmentCreator -- Segment : Use >
@enduml